tests/ui/fail/context-type-conflicting-02.stderr
error: encountered conflicting Context types in #[union_fn] trait
 --> tests/ui/fail/context-type-conflicting-02.rs:6:5
  |
6 |     type Context = i32;
  |     ^^^^^^^^^^^^^^^^^^^

error: previous Context definition here
 --> tests/ui/fail/context-type-conflicting-02.rs:5:5
  |
5 |     type Context = i32;
  |     ^^^^^^^^^^^^^^^^^^^
